WIP: Bump upstreams to 2022.09
Adopt upstreams for next platform iteration.

Change-Id: I346020355d66bcca621bc479f5099c3069de4b61
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>